# executor_evm

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_eth  Makefile  README.md  executor-log4rs.yaml
.github/workflows/: build-docker-images.yml  build-eth-docker-images.yml  rust-check.yml
chain/core/: Cargo.toml
chain/core/src/filters/: rpc_filter.rs
chain/core/src/libchain/: chain.rs
core/: Cargo.toml
core/src/: authentication.rs  cita_executive.rs  lib.rs
core/src/contracts/native/: crosschain_verify.rs
core/src/contracts/solc/: allowance_management.rs  mod.rs
core/src/contracts/tools/: decode.rs
core/src/libexecutor/: block.rs  call_request.rs  command.rs  executor.rs  sys_config.rs
core/src/tests/: amend_data_test.rs
example/: config.toml
mirror/: config
src/: config.rs  core_chain.rs  core_executor.rs  executor_server.rs  health_check.rs  lib.rs  main.rs  panic_hook.rs  trie_db.rs  types.rs
src/core_chain/filters/: rpc_filter.rs
src/core_chain/libchain/: chain.rs  mod.rs
src/core_executor/: authentication.rs  cita_executive.rs  cita_vm_helper.rs  data_provider.rs  exception.rs  trie_db.rs
src/core_executor/benches/: executor.rs
src/core_executor/contracts/native/: crosschain_verify.rs  factory.rs  simple_storage.rs
src/core_executor/contracts/solc/: admin.rs  allowance_management.rs  chain_manager.rs  emergency_intervention.rs  mod.rs  node_manager.rs  permission_management.rs  price_manager.rs  quota_manager.rs  sys_config.rs  user_management.rs  version_management.rs
src/core_executor/contracts/tools/: decode.rs
src/core_executor/libexecutor/: auto_exec.rs  block.rs  call_request.rs  command.rs  executor.rs  fsm.rs  mod.rs  sys_config.rs
src/tests/: amend_data_test.rs  exemock.rs  helpers.rs  mod.rs
src/types/: block.rs  block_number.rs  block_receipts.rs  context.rs  db_indexes.rs  filter.rs  header.rs  log.rs  log_blooms.rs  receipt.rs  state_proof.rs  transaction.rs  transaction_index.rs
src/types/errors/: authentication.rs  call.rs  execution.rs  mod.rs  native.rs  receipt.rs
types/: Cargo.toml
types/src/: block.rs  header.rs  receipt.rs  reserved_addresses.rs  transaction.rs
types/src/errors/: authentication.rs  receipt.rs
