# Copyright Rivtower Technologies LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "executor"
version = "6.6.4"
authors = ["Yieazy <yuitta@163.com>", "Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
cita-database = "0.3"
tokio = { version = "1.21", features = ["full"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
crossbeam-channel = "0.5"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bloomchain = "0.2"
lazy_static = "1.4"
time = "0.3"
cita_trie = "4.0"
byteorder = { version = "1", default-features = false }
bincode = "1.3"
rand = "0.8"
ethabi = "18.0"
parking_lot = "0.12"
ethbloom = "0.13"
sha3 = { version="0.10", optional=true }
tiny-keccak = { version="2.0", optional=true }
hashbrown = { version = "0.13", features = ["rayon"] }
hasher = { version="0.1" }
ethereum-types = "0.14"
backtrace = "0.3"
tower = "0.4"

cita-merklehash = "0.1"
cita-secp256k1 = "0.1"
cita-crypto = "0.1"
rlp = "0.5"
util = { package = "cita-util", version = "0.1" }
hashable = { package = "cita-hashable", version = "0.1" }
libproto = { git = "https://github.com/cita-cloud/libproto" }
tracing = "0.1"

cloud-util = "=0.6.1"
cita_cloud_proto = "=6.6.4"

[dependencies.cita-vm]
version = "0.3"
default-features = false
features = ["sha3hash"]

[dev-dependencies]
cpuprofiler = "0.0.4"
tempdir = "0.3.7"

[features]
default = ["sm2", "sm3hash", "hashlib-keccak"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash"]
hashlib-keccak = ["tiny-keccak"]
hashlib-sha3 = ["sha3"]

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
