[package]
name = 'executor'
version = '6.6.5'
license = 'Apache-2.0'
edition = '2021'
authors = [
    'Yieazy <yuitta@163.com>',
    'Rivtower Technologies <contact@rivtower.com>',
]

[dependencies]
tonic = '0.9'
prost = '0.11'
cita-database = '0.3'
crossbeam-channel = '0.5'
hex = '0.4'
serde = '1.0'
serde_derive = '1.0'
serde_json = '1.0'
bloomchain = '0.2'
lazy_static = '1.4'
time = '0.3'
cita_trie = '4.0'
bincode = '1.3'
rand = '0.8'
ethabi = '18.0'
parking_lot = '0.12'
ethbloom = '0.13'
ethereum-types = '0.14'
tower = '0.4'
cita-merklehash = '0.1'
cita-secp256k1 = '0.1'
cita-crypto = '0.1'
rlp = '0.5'
tracing = '0.1'
cloud-util = '=0.6.2'
cita_cloud_proto = '=6.6.5'

[dependencies.tokio]
version = '1.27'
features = ['full']

[dependencies.clap]
version = '4.2'
features = [
    'derive',
    'cargo',
]

[dependencies.byteorder]
version = '1'
default-features = false

[dependencies.sha3]
version = '0.10'
optional = true

[dependencies.tiny-keccak]
version = '2.0'
optional = true

[dependencies.hashbrown]
version = '0.13'
features = ['rayon']

[dependencies.hasher]
version = '0.1'

[dependencies.util]
package = 'cita-util'
version = '0.1'

[dependencies.hashable]
package = 'cita-hashable'
version = '0.1'

[dependencies.libproto]
git = 'https://github.com/cita-cloud/libproto'

[dependencies.cita-vm]
version = '0.3'
default-features = false
features = ['sha3hash']

[dev-dependencies]
cpuprofiler = '0.0.4'
tempdir = '0.3.7'

[features]
default = [
    'sm2',
    'sm3hash',
    'hashlib-keccak',
]
secp256k1 = [
    'cita-crypto/secp256k1',
    'libproto/secp256k1',
]
sm2 = [
    'cita-crypto/sm2',
    'libproto/sm2',
]
sha3hash = [
    'hashable/sha3hash',
    'libproto/sha3hash',
]
sm3hash = [
    'hashable/sm3hash',
    'libproto/sm3hash',
]
hashlib-keccak = ['tiny-keccak']
hashlib-sha3 = ['sha3']
[profile.release]
debug = 1
[profile.release.package."*"]
debug = 0
